@@ -1,3 +1,10 @@
+2014-10-14  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* gnus-start.el (gnus-save-newsrc-file-check-timestamp): New option to
+	check the newsrc.eld file's timestamp before saving it.
+	(gnus-save-newsrc-file): Use it, with a prompt when the newsrc.eld
+	timestamp has changed to be newer.
+
 2014-10-06  Jan Tatarik  <jan.tatarik@gmail.com>
 
 	* gnus-icalendar.el (gnus-icalendar-identities):
